--- a/src/app/users/administradores/agg-administradores/agg-administradores.component.html
+++ b/src/app/users/administradores/agg-administradores/agg-administradores.component.html
@@ -48,9 +48,8 @@
             </div>
             <div class="input-group">
               <select [(ngModel)]="administradorData.status" required>
-                <option value="" disabled selected>Seleccionar Status del Chofer</option>
+                <option value="" disabled selected>Seleccionar Status del Administrador/option>
                 <option value="activo">Activo</option>
-                <option value="inactivo">Inactivo</option>
               </select>
             </div>
           </div>
